@startuml

class TodoListApplication {
    +start (): void
    +main (): void
}

Application <|-- TodoListApplication

class TodoListController {

    -MenuBar fileMenu
    -TextField descriptionTextField
    -TextField titleTextField
    -TableView<Events> itemList
    -TableColumn<Events, String> titleCol
    -TableColumn<Events, String> descriptionCol
    -TableColumn<Events, LocalDate> dateCol
    -TableColumn<Events, String> statusCol
    -ComboBox<String> filterBox

    addTask (ActionEvent event): void
    clearList (ActionEvent event): void
    deleteTask (ActionEvent event): void
    openExistingFile (ActionEvent event): void
    viewCompleted (ActionEvent event): void
    viewIncompleted (ActionEvent event): void
    writeToFile (ActionEvent event): void
}

class Events {
    -SimpleStringProperty title
    -SimpleStringProperty description
    -SimpleObjectProperty<LocalDate> dueDate

    +Events (String title, String description)
    +getTitle ():String
    +setTitle (String title):void
    +titleProperty ():SimpleStringProperty
    +getDescription ():String
    +setDescription (String description):void
    +descriptionProperty ():SimpleStringProperty
    +getDueDate ():LocalDate
    +setDueDate (LocalDate dueDate):void
    +dueDateProperty ():SimpleObjectProperty<LocalDate>

}

TodoListController<--Events

class LocalDateTableCell{
    -DateTimeFormatter formatter
    -DatePicker datePicker

    +LocalDateTableCell(TableColumn<Events, LocalDate> dateTableColumn)
    #updateItem(LocalDate item, boolean empty): void
}

class WrapAndEditCell {
    -Text cellText

    +WrapAndEditCell ()
    +updateItem (String item, boolean empty):void
    +cancelEdit ():void
    -createText ():Text
}

TodoListController <-- LocalDateTableCell
TodoListController <-- WrapAndEditCell

TextFieldTableCell <|-- WrapAndEditCell
TableCell <|-- LocalDateTableCell
@enduml